Create chart from deployment YAML files

--- a/hmda/src/main/resources/application-kubernetes.conf
+++ b/hmda/src/main/resources/application-kubernetes.conf
@@ -26,7 +26,7 @@ akka {
     cluster.bootstrap {
 
       contact-point-discovery {
-        service-name = "hmda-bootstrap"
+        service-name = "hmda-api"
         service-name = ${?KUBERNETES_HMDA_SERVICE_NAME}
         service-namespace = "default.svc.cluster.local"
         service-namespace = ${?KUBERNETES_HMDA_SERVICE_NAMESPACE}
