--- a/kubernetes/hmda-platform/templates/clusterrole.yaml
+++ b/kubernetes/hmda-platform/templates/clusterrole.yaml
@@ -1,16 +1,9 @@
-{{- if .Values.rbac.create -}}
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  namespace: {{ .Values.namespace }}
-  name: {{ template "hmda-platform.name" .}}-pod-reader
-  labels:
-    app: {{ template "hmda-platform.name" .}}
-    chart: {{ .Chart.Name}}-{{ .Chart.Version}}
-    heritage: {{ .Release.Service }}
-    release: {{ .Release.Name }}
+  namespace: default
+  name: pod-reader
 rules:
   - apiGroups: [""] # "" indicates the core API group
     resources: ["pods"]
     verbs: ["get", "list"]
-{{- end -}}
