--- a/kubernetes/hmda-platform/templates/clusterrolebinding.yaml
+++ b/kubernetes/hmda-platform/templates/clusterrolebinding.yaml
@@ -1,20 +1,13 @@
-{{- if .Values.rbac.create -}}
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  name: {{ template "hmda-platform.name" .}}-pod-reader-binding
-  namespace: {{ .Values.namespace }}
-  labels:
-    app: {{ template "hmda-platform.name" . }}
-    chart: {{ .Chart.Name}}-{{ .Chart.Version}}
-    heritage: {{ .Release.Service }}
-    release: {{ .Release.Name}}
+  name: pod-reader-binding
+  namespace: default
 subjects:
   - kind: ServiceAccount
-    name: {{ .Values.service.account.name }}
-    namespace: {{ .Values.namespace }}
+    name: hmda-service-account
+    namespace: default
 roleRef:
   kind: ClusterRole
-  name: {{ template "hmda-platform.name" .}}-pod-reader
+  name: pod-reader
   apiGroup: rbac.authorization.k8s.io
-{{- end -}}
