--- a/kubernetes/hmda-platform/templates/service-account.yaml
+++ b/kubernetes/hmda-platform/templates/service-account.yaml
@@ -1,10 +1,5 @@
-apiVersion: v1
 kind: ServiceAccount
+apiVersion: v1
 metadata:
-  name: {{ .Values.service.account.name }}
-  labels:
-    app: {{ template "hmda-platform.name" . }}
-    chart: {{ template "hmda-platform.chart" . }}
-    heritage: {{ .Release.Service }}
-    release: {{ .Release.Name }}
+  name: hmda-service-account
 automountServiceAccountToken: true
