--- a/kubernetes/hmda-platform/templates/service.yaml
+++ b/kubernetes/hmda-platform/templates/service.yaml
@@ -21,9 +21,9 @@ spec:
   selector:
     app: hmda
   ports:
-  - protocol: TCP
-    port: 8558
-    targetPort: 8558
+  - protocol: {{ .Values.bootstrap.protocol }}
+    port: {{ .Values.bootstrap.port }}
+    targetPort: {{ .Values.bootstrap.port }}
 
 ---
 kind: Service
@@ -35,19 +35,19 @@ spec:
     app: hmda
   type: NodePort
   ports:
-  - name: filing
-    protocol: TCP
-    port: 8080
-    targetPort: 8080
-  - name: admin
-    protocol: TCP
-    port: 8081
-    targetPort: 8081
-  - name: public
-    protocol: TCP
-    port: 8082
-    targetPort: 8082
-  - name: cluster
-    protocol: TCP
-    port: 19999
-    targetPort: 19999
+  - name: {{ .Values.filing.name }}
+    protocol: {{ .Values.filing.protocol }}
+    port: {{ .Values.filing.port }}
+    targetPort: {{ .Values.filing.port }}
+  - name: {{ .Values.admin.name }}
+    protocol: {{ .Values.admin.protocol }}
+    port: {{ .Values.admin.port }}
+    targetPort: {{ .Values.admin.port }}
+  - name: {{ .Values.public.name }}
+    protocol: {{ .Values.public.protocol }}
+    port: {{ .Values.public.port }}
+    targetPort: {{ .Values.public.port }}
+  - name: {{ .Values.cluster.name }}
+    protocol: {{ .Values.cluster.protocol }}
+    port: {{ .Values.cluster.port }}
+    targetPort: {{ .Values.cluster.port }}
