--- a/kubernetes/hmda-platform/templates/service-account.yaml
+++ b/kubernetes/hmda-platform/templates/service-account.yaml
@@ -1,5 +1,5 @@
 kind: ServiceAccount
 apiVersion: v1
 metadata:
-  name: hmda-service-account
+  name: {{ .Values.service.account.name }}
 automountServiceAccountToken: true
