Add Institution Persistent Actor

--- a/hmda/src/test/resources/application.conf
+++ b/hmda/src/test/resources/application.conf
@@ -5,4 +5,17 @@ akka {
   actor {
     provider = "local"
   }
+
+  persistence {
+    journal.plugin = "cassandra-journal"
+    snapshot-store.plugin = "cassandra-snapshot-store"
+  }
+
+  test.single-expect-default = 20s
+
+}
+
+cassandra-journal {
+  contact-points.0="localhost:9042"
+  circuit-breaker.call-timeout = 30s
 }
