--- a/hmda/src/main/resources/application-dev.conf
+++ b/hmda/src/main/resources/application-dev.conf
@@ -16,6 +16,11 @@ akka {
     }
   }
 
+  persistence {
+    journal.plugin = "cassandra-journal"
+    snapshot-store.plugin = "cassandra-snapshot-store"
+  }
+
   cluster {
     seed-nodes = ["akka.tcp://hmda2@127.0.0.1:2551"]
   }
