Add institution persitent actor test

--- a/hmda/src/test/resources/application.conf
+++ b/hmda/src/test/resources/application.conf
@@ -16,6 +16,6 @@ akka {
 }
 
 cassandra-journal {
-  contact-points.0="localhost:9042"
-  circuit-breaker.call-timeout = 30s
+  connect-retries = 10
+  connect-retry-delay = 20s
 }
