Complete institution persistence tests

--- a/hmda/src/test/resources/application.conf
+++ b/hmda/src/test/resources/application.conf
@@ -3,7 +3,17 @@ akka {
   loglevel = OFF
 
   actor {
-    provider = "local"
+    provider = "cluster"
+  }
+
+  remote {
+    netty.tcp {
+      hostname = "localhost"
+      port = 0
+
+      bind-hostname = 0.0.0.0
+      bind-port = 0
+    }
   }
 
   persistence {
