--- a/check-digit/Jenkinsfile
+++ b/check-digit/Jenkinsfile
@@ -19,5 +19,11 @@ volumes: [
        }
      }
 
+     stage('Build Docker Image') {
+       container('docker') {
+         sh "docker build --rm -t=hmda/check-digit check-digit/target/docker/stage/Dockerfile""
+       }
+     }
+
    }
 }
