--- a/check-digit/Jenkinsfile
+++ b/check-digit/Jenkinsfile
@@ -25,5 +25,15 @@ volumes: [
        }
      }
 
-   }
+    stage('Publish Docker Image') {
+      container('docker') {
+        withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'dockerhub',
+            usernameVariable: 'DOCKER_HUB_USER', passwordVariable: 'DOCKER_HUB_PASSWORD']]) {
+              sh "docker login -u ${env.DOCKER_HUB_USER} -p ${env.DOCKER_HUB_PASSWORD} "
+              sh "docker push ${env.DOCKER_HUB_USER}/check-digit:${gitBranch}"
+            }
+        }
+      }
+    }
+
 }
