--- a/check-digit/Jenkinsfile
+++ b/check-digit/Jenkinsfile
@@ -33,7 +33,7 @@ volumes: [
 
     stage('Deploy Branch: ${gitBranch}') {
       container('helm') {
-        sh "helm upgrade --install --name check-digit-${gitBranch} -f kubernetes/check-digit/values.yml --set image.tag=${gitBranch} kubernetes/check-digit"
+        sh "helm upgrade --install --force --values=kubernetes/check-digit/values.yaml --set image.tag=${gitBranch} check-digit-${gitBranch} kubernetes/check-digit"
       }
     }
 
