--- a/check-digit/Jenkinsfile
+++ b/check-digit/Jenkinsfile
@@ -31,7 +31,7 @@ volumes: [
         }
       }
 
-    stage('Deploy Branch: ${gitBranch}') {
+    stage('Deploy') {
       container('helm') {
         sh "helm upgrade --install --force --values=kubernetes/check-digit/values.yaml --set image.tag=${gitBranch} check-digit-${gitBranch} kubernetes/check-digit"
       }
