--- a/kubernetes/hmda-platform/templates/clusterrolebinding.yaml
+++ b/kubernetes/hmda-platform/templates/clusterrolebinding.yaml
@@ -3,6 +3,8 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: pod-reader-binding
   namespace: default
+  labels:
+      rbac.authorization.k8s.io/aggregate-to-admin: "true"
 subjects:
   - kind: ServiceAccount
     name: hmda-service-account
