--- a/kubernetes/hmda-platform/values.yaml
+++ b/kubernetes/hmda-platform/values.yaml
@@ -5,12 +5,7 @@
 namespace: default
 
 rbac:
-  install: true
-   serviceAccount: default
-   # RBAC api version (currently either v1beta1 or v1alpha1)
-   apiVersion: v1beta1
-   # Cluster role reference
-   roleRef: cluster-admin
+  enabled: false
 
 replicaCount: 3
 
