Add cluster-admin role to default; fix hmda label selector for hmda-api

--- a/kubernetes/hmda-platform/templates/service.yaml
+++ b/kubernetes/hmda-platform/templates/service.yaml
@@ -32,7 +32,7 @@ metadata:
   name: hmda-api
 spec:
   selector:
-    app: hmda
+    app: hmda-platform
   type: NodePort
   ports:
   - name: {{ .Values.filing.name }}
