Use jenkins service account

--- a/kubernetes/jenkins-values.yaml
+++ b/kubernetes/jenkins-values.yaml
@@ -126,7 +126,7 @@ NetworkPolicy:
 ## Install Default RBAC roles and bindings
 rbac:
   install: true
-  serviceAccount: default
+  serviceAccount: jenkins
   # RBAC api version (currently either v1beta1 or v1alpha1)
   apiVersion: v1beta1
   # Cluster role reference
