--- a/hmda/Jenkinsfile
+++ b/hmda/Jenkinsfile
@@ -33,7 +33,7 @@ volumes: [
 
     stage('Deploy') {
       container('helm') {
-        sh "helm upgrade --install --force --values=kubernetes/hmda-platform/values.yaml --set image.tag=${gitBranch} hmda-platform-${gitBranch} kubernetes/hmda-platform"
+        sh "helm upgrade --install --force --namespace=default --values=kubernetes/hmda-platform/values.yaml --set image.tag=${gitBranch} hmda-platform-${gitBranch} kubernetes/hmda-platform"
       }
     }
 
