Add majority split brain resolver

--- a/hmda/src/main/resources/application-dev.conf
+++ b/hmda/src/main/resources/application-dev.conf
@@ -4,6 +4,8 @@ akka {
   http.server.default-host-header = "cfpb.gov"
   http.parsing.max-content-length = 1G
 
+  discovery.method = akka-dns
+
   actor {
     provider = "cluster"
   }
@@ -23,6 +25,33 @@ akka {
 
   cluster {
     seed-nodes = ["akka.tcp://hmda2@127.0.0.1:2551"]
+    downing-provider-class = "tanukki.akka.cluster.autodown.MajorityLeaderAutoDowning"
+    failure-detector.threshold = 12
+    metrics.enabled = off
+  }
+
+  custom-downing {
+    stable-after = 10s
+
+    majority-leader-auto-downing {
+      majority-member-role = ""
+      down-if-in-minority = true
+      shutdown-actor-system-on-resolution = true
+    }
+  }
+
+  management {
+    http {
+      # The hostname where the HTTP Server for Http Cluster Management will be started.
+      # This defines the interface to use.
+      # InetAddress.getLocalHost.getHostAddress is used not overriden or empty
+      hostname = ${?HOST}
+      port = 19999
+      port = ${?PORT_19999}
+
+      bind-hostname = 0.0.0.0
+      bind-port = 19999
+    }
   }
 }
 
