--- a/hmda/src/main/resources/application.conf
+++ b/hmda/src/main/resources/application.conf
@@ -11,6 +11,12 @@ akka {
     provider = "cluster"
   }
 
+  cluster {
+    failure-detector.threshold = 12
+    metrics.enabled = off
+    downing-provider-class = "tanukki.akka.cluster.autodown.MajorityLeaderAutoDowning"
+  }
+
   remote {
     netty.tcp {
       hostname = ${?HOST}
@@ -19,6 +25,17 @@ akka {
 
       bind-hostname = 0.0.0.0
       bind-port = 2551
+    }
+  }
+
+  custom-downing {
+    stable-after = 10s
+    stable-after = ${?CUSTOM_DOWNING_STABLE_AFTER}
+
+    majority-leader-auto-downing {
+      majority-member-role = ""
+      down-if-in-minority = true
+      shutdown-actor-system-on-resolution = true
     }
   }
 
@@ -35,39 +52,39 @@ akka {
       bind-port = 19999
     }
 
-    cluster.bootstrap {
+    cluster {
+      bootstrap {
+        # Configuration for the first phase of bootstraping, during which contact points are discovered
+        # using the configured service discovery mechanism (e.g. DNS records).
+        contact-point-discovery {
 
-      # Configuration for the first phase of bootstraping, during which contact points are discovered
-      # using the configured service discovery mechanism (e.g. DNS records).
-      contact-point-discovery {
+          # Define this name to be looked up in service discovery for "neighboring" nodes
+          # If undefined, the name will be extracted from the ActorSystem name
+          service-name = ${?MARATHON_APP_ID}
 
-        # Define this name to be looked up in service discovery for "neighboring" nodes
-        # If undefined, the name will be extracted from the ActorSystem name
-        service-name = ${?MARATHON_APP_ID}
+          # Added as suffix to the service-name to build the effective-service name used in the contact-point service lookups
+          # If undefined, nothing will be appended to the service-name.
+          #
+          # Examples, set this to:
+          # "default.svc.cluster.local" or "my-namespace.svc.cluster.local" for kubernetes clusters.
+          service-namespace = "marathon.mesos"
 
-        # Added as suffix to the service-name to build the effective-service name used in the contact-point service lookups
-        # If undefined, nothing will be appended to the service-name.
-        #
-        # Examples, set this to:
-        # "default.svc.cluster.local" or "my-namespace.svc.cluster.local" for kubernetes clusters.
-        service-namespace = "marathon.mesos"
+          # The effective service name is the exact string that will be used to perform service discovery.
+          #
+          # Set this value to a specific string to override the default behaviour of building the effective name by
+          # concatenating the `service-name` with the optional `service-namespace` (e.g. "name.default").
+          effective-name = ${?SERVICE_NAME}
+        }
 
-        # The effective service name is the exact string that will be used to perform service discovery.
-        #
-        # Set this value to a specific string to override the default behaviour of building the effective name by
-        # concatenating the `service-name` with the optional `service-namespace` (e.g. "name.default").
-        effective-name= ${?SERVICE_NAME}
+        # Configured how we communicate with the contact point once it is discovered
+        contact-point {
+          # If no port is discovered along with the host/ip of a contact point this port will be used as fallback
+          fallback-port = 19999
+          fallback-port = ${?PORT_19999}
+        }
+
       }
-
-      # Configured how we communicate with the contact point once it is discovered
-      contact-point {
-        # If no port is discovered along with the host/ip of a contact point this port will be used as fallback
-        fallback-port = 19999
-        fallback-port = ${?PORT_19999}
-      }
-
     }
-
   }
 
 }
