Change service name to reflect branch being run

--- a/kubernetes/hmda-platform/templates/service.yaml
+++ b/kubernetes/hmda-platform/templates/service.yaml
@@ -29,7 +29,7 @@ spec:
 kind: Service
 apiVersion: v1
 metadata:
-  name: hmda-api
+  name: {{ .Values.service.name }}
 spec:
   selector:
     app: hmda-platform
